plugins {
    id 'java'
}

subprojects {
    apply plugin: 'java'

    group = 'com.example'
    version = '1.0'

    repositories {
        mavenCentral()
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }
}